Add PMC cap to We-Ya responder for DRIP

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/we-ya_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/we-ya_responder.yml
@@ -61,6 +61,7 @@
   equipment:
     ears: RMCHeadsetDistressPMCDirector
     back: CMSatchel
+    head: ArmorHelmetPMC
     jumpsuit: CMJumpsuitLiaisonBlack
     outerClothing: RMCJacketCorporateFormal
     shoes: RMCShoesLaceup
