--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
@@ -348,3 +348,8 @@
   - type: MobCollision
   - type: RMCMobCollision
   - type: RMCRest
+  - type: IVDripTarget
+  - type: MeleeDamageMultiplier
+    whitelist:
+      components:
+      - Xeno
