--- a/Resources/Prototypes/_RMC14/Entities/Objects/Medical/defib.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Medical/defib.yml
@@ -84,6 +84,7 @@
     enabled: false
     useRate: 66
   - type: RMCPowerUsageDisplay
+  - type: UseOnSynthBlocked
 
 - type: entity
   id: CMDefibrillatorEmpty
@@ -99,3 +100,53 @@
   parent: CMBaseDefibrillator
   id: CMDefibrillatorInfinite
   suffix: RMC14, Infinite
+
+- type: entity
+  parent: [CMBaseDefibrillator, RMCPowerCellSlotUnremovable]
+  id: RMCSynthResetKey
+  name: WeYa synthetic reset key
+  description: Result of collaboration between Cybersun and Weston-Yamada, this device can fix major glitches or programming errors of synthetic units, as well as being able to restart a synthetic that has suffered critical failure. It can only be used once before being reset.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Devices/reset_key.rsi
+    layers:
+    - state: defib
+    - state: defib_on
+      map: [ "enum.ToggleVisuals.Layer" ]
+      visible: false
+  - type: PowerCellDraw
+    enabled: false
+    useRate: 500 # change to 1000 when defib power drawing is fixed
+  - type: RMCPowerUsageDisplay
+  - type: RequiresSkill
+    skills:
+      RMCSkillEngineer: 1
+  - type: ItemToggle
+    soundActivate:
+      path: /Audio/_RMC14/Machines/click.ogg
+    soundDeactivate:
+      path: /Audio/_RMC14/Machines/click.ogg
+  - type: Defibrillator
+    zapSound:
+      path: /Audio/_RMC14/Medical/reset_key_release.ogg
+      params:
+        volume: -6
+    chargeSound:
+      path: /Audio/_RMC14/Medical/reset_key_powerup.ogg
+      params:
+        volume: -8
+    failureSound:
+      path: /Audio/_RMC14/Medical/reset_key_shortbeep.ogg
+      params:
+        volume: -6
+    successSound:
+      path: /Audio/_RMC14/Medical/reset_key_boot_on.ogg
+      params:
+        volume: -6
+  - type: UseOnSynthBlocked
+    reversed: true
+    popup: rmc-species-synth-reset-key-invalid
+  - type: Item
+    size: Normal
+    sprite: _RMC14/Objects/Devices/reset_key.rsi
+    heldPrefix: null
