--- a/Resources/Prototypes/_RMC14/Entities/Structures/platform.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/platform.yml
@@ -722,7 +722,8 @@
   description: A raised level of metal, often used to elevate areas above others, or construct bridges. You could probably climb it.
   components:
   - type: Sprite
-    state: sandstone
+    state: stone
+    color: "#b29082"
   - type: Construction
     graph: RMCPlatformSandstoneDestructible
     node: start
@@ -732,7 +733,8 @@
   id: RMCPlatformSandstoneBroken
   components:
   - type: Sprite
-    state: sandstone_broken
+    state: stone_broken
+    color: "#b29082"
   - type: Construction
     graph: RMCPlatformSandstoneDestructible
     node: platformBroken
@@ -744,4 +746,23 @@
   description: The corner of what appears to be raised piece of metal, often used to imply the illusion of elevation in non-Euclidean 2d spaces. But you don't know that, you're just a spaceman with a rifle.
   components:
   - type: Sprite
-    state: sandstone_deco
+    state: stone_deco
+    color: "#b29082"
+    
+- type: entity
+  parent: CMPlatform
+  id: RMCPlatformSandstoneStairRight
+  name: sandstone platform stair
+  components:
+  - type: Sprite
+    state: stone_stair
+    color: "#b29082"
+
+- type: entity
+  parent: CMPlatform
+  id: RMCPlatformSandstoneStairLeft
+  name: sandstone platform stair
+  components:
+  - type: Sprite
+    state: stone_stair_alt
+    color: "#b29082"
