--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/tse_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/tse_responder.yml
@@ -9,6 +9,7 @@
   startingGear: RMCGearTSEResponder
   icon: "CMJobIconEmpty"
   joinNotifyCrew: false
+  supervisors: cm-job-supervisors-staff
   accessGroups:
   - ShipMasterAccess
   special:
