clipboards for everyone

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/clf_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/clf_responder.yml
@@ -67,6 +67,7 @@
     id: RMCIDCardCLFResponder
     ears: CMHeadsetColony
     back: CMSatchel
+    belt: CMClipboard
     pocket1: RMCPouchGeneralLarge
     pocket2: RMCPouchDocument
 
