--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/provost_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/provost_responder.yml
@@ -68,7 +68,7 @@
     gloves: CMHandsBlackMarine
     shoes: CMBootsBlackFilled
     id: RMCIDCardProvostResponder
-    belt: CMBeltSecurityMP
+    belt: CMClipboard
     back: CMSatchelSecurity
     pocket1: RMCPouchDocument
     pocket2: RMCPouchGeneralLarge
