--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/spp_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/spp_responder.yml
@@ -67,6 +67,7 @@
     id: RMCIDCardSPPResponder
     ears: RMCHeadsetSPPCommand
     back: CMSatchel
+    belt: CMClipboard
     pocket1: RMCPouchGeneralLarge
     pocket2: RMCPouchDocument
 
