--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/we-ya_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/we-ya_responder.yml
@@ -62,6 +62,7 @@
   equipment:
     ears: RMCHeadsetDistressPMCDirector
     back: CMSatchel
+    belt: CMClipboard
     head: ArmorHelmetPMC
     jumpsuit: CMJumpsuitLiaisonBlack
     outerClothing: RMCJacketCorporateFormal
