--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Pistols/m10_auto_pistol.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Pistols/m10_auto_pistol.yml
@@ -77,24 +77,23 @@
   #- type: Tag
    # id: RMCWeaponPistolM13
 
-
-- type: entity
-  parent: RMCWeaponPistolM13
-  id: RMCWeaponPistolM13Empty
-  suffix: Empty
-  components:
-  - type: ItemSlots
-    slots:
-      gun_magazine:
-        name: Magazine
-        insertSound: /Audio/_RMC14/Weapons/Guns/Reload/gun_mk80_reload.ogg
-        ejectSound: /Audio/_RMC14/Weapons/Guns/Reload/gun_88m4_unload.ogg
-        priority: 2
-        whitelist:
-          tags:
-          - RMCMagazinePistolM13
-          - RMCMagazinePistolM13Ext
-          - RMCMagazinePistolM13Drum
+## Not sure if this needs an empty sprite
+#- type: entity
+#  parent: CMWeaponPistolM1984
+#  id: CMWeaponPistolM1984Empty
+#  suffix: Empty
+#  components:
+#  - type: ItemSlots
+#    slots:
+#      gun_magazine:
+#        name: Magazine
+#        insertSound: /Audio/_RMC14/Weapons/Guns/Reload/gun_mk80_reload.ogg
+#        ejectSound: /Audio/_RMC14/Weapons/Guns/Reload/gun_88m4_unload.ogg
+#        priority: 2
+#       whitelist:
+#          tags:
+#          - CMMagazinePistolM1984
+#          - RMCMagazinePistolM1984AP
 
 #uses the smg 10x20mm
 - type: entity
