--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Squad/prep.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Squad/prep.yml
@@ -49,7 +49,7 @@
         amount: 25
       - id: CMWeaponPistolM1984Empty
         amount: 25
-      - id: RMCWeaponPistolM13Empty
+      - id: RMCWeaponPistolM13
         amount: 25
       #- id: WeaponFlareM82F
       #  amount: 10
