--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
@@ -65,6 +65,7 @@
     - Flashed
     - Dazed
     - Blinded
+    - Deaf
   - type: Blindable
   - type: Tag
     tags:
@@ -348,3 +349,4 @@
   - type: MobCollision
   - type: RMCMobCollision
   - type: RMCRest
+  - type: DeafenWhileCrit
