Fire sentries offset correctly (most of the time)

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
@@ -74,6 +74,7 @@
     bypassTierCount: true
     unlockAt: 0
     hudOffset: -0.1,0
+  - type: RMCFireProjectileImmune
   - type: XenoHeavy
   - type: XenoAcid
   - type: XenoConstruction
