--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
@@ -11,6 +11,7 @@
   components:
   - type: GhostRole
     name: cm-job-name-xeno-ravager
+  - type: RMCFireProjectileImmune
   - type: Sprite
     sprite: _RMC14/Mobs/Xenonids/Ravager/ravager.rsi
   - type: MobState
