--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Head/Helmets/marine_helmets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Head/Helmets/marine_helmets.yml
@@ -296,6 +296,7 @@
       Urban: _RMC14/Objects/Clothing/Head/Helmets/m3/g4/urban.rsi
   - type: Corrodible
     isCorrodible: false
+  - type: RMCEarProtection
 
 # M35 Pyro Spec
 - type: entity
@@ -366,7 +367,8 @@
   - type: Sprite
     sprite: _RMC14/Objects/Clothing/Head/Helmets/m3/demo/jungle.rsi
   - type: Clothing
-    sprite: _RMC14/Objects/Clothing/Head/Helmets/m3/demo/jungle.rsi # TODO RMC14 Give hearing protection component if ear damage is added
+    sprite: _RMC14/Objects/Clothing/Head/Helmets/m3/demo/jungle.rsi
+  - type: RMCEarProtection
   - type: ItemCamouflage
     camouflageVariations:
       Jungle: _RMC14/Objects/Clothing/Head/Helmets/m3/demo/jungle.rsi
