Add adjutant icon, sunglasses to some responders. I suck at using github

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/free_press_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/free_press_responder.yml
@@ -66,6 +66,7 @@
     head: ClothingHeadHatFedoraBrown
     id: RMCIDCardFreePressResponder
     ears: CMHeadsetReporter
+    eyes: RMCSunglasses
     back: CMSatchel
     belt: CMClipboard
     pocket1: RMCPouchGeneralLarge
