--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/tse_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/tse_responder.yml
@@ -65,6 +65,7 @@
     head: RMCHeadRoyalBeret
     id: RMCIDCardTSEResponder
     ears: RMCHeadsetRoyalMarine
+    eyes: RMCSunglasses
     back: CMSatchel
     belt: CMClipboard
     pocket1: RMCPouchGeneralLarge
