--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/unmc_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/unmc_responder.yml
@@ -66,6 +66,7 @@
     head: RMCHeadCapFlippable
     id: RMCIDCardUNMCResponder
     ears: CMHeadsetHighCommand
+    eyes: RMCSunglasses
     back: CMSatchel
     belt: CMClipboard
     pocket1: RMCPouchGeneralLarge
