--- a/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
+++ b/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
@@ -548,6 +548,7 @@
     - ActionXenoAcidShroud
     cooldown: 30
     onPerform: false
+  - type: ActionBlockIfResting
 
 - type: entity
   parent: ActionXenoBase
