--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
@@ -348,3 +348,4 @@
   - type: MobCollision
   - type: RMCMobCollision
   - type: RMCRest
+  - type: StunOnExplosionReceived # TODO should also cause hearing loss
