--- a/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/dropship_pilot.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/dropship_pilot.yml
@@ -13,6 +13,7 @@
   startingGear: CMGearPilotDropship
   icon: "CMJobIconPilotDropship"
   joinNotifyCrew: false
+  marineAuthorityLevel: 8
   supervisors: cm-job-supervisors-aso
   accessGroups:
   - Pilot
