--- a/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/gunship_pilot.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/gunship_pilot.yml
@@ -13,6 +13,7 @@
   startingGear: CMGearPilotGunship
   icon: "CMJobIconPilotGunship"
   joinNotifyCrew: false
+  marineAuthorityLevel: 8
   supervisors: cm-job-supervisors-aso
   accessGroups:
   - Pilot
