--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Command/staff_officer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Command/staff_officer.yml
@@ -18,6 +18,7 @@
   icon: "CMJobIconStaffOfficer"
   requireAdminNotify: true
   joinNotifyCrew: false
+  marineAuthorityLevel: 12
   supervisors: cm-job-supervisors-co
   accessGroups:
   - MarineMain
