--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Melee/stun_baton.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Melee/stun_baton.yml
@@ -20,6 +20,9 @@
     whitelist:
       components:
       - Marine
+    blacklist:
+      components:
+      - RMCMPStunImmune
 
 # TODO RMC14: Actually implement the telescopic baton
 - type: entity
