--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/standard.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/standard.yml
@@ -56,6 +56,7 @@
       settings: short
   - type: GhostRoleApplySpecial
     squad: SquadPMC
+  - type: RMCMPStunImmune
 
 - type: startingGear
   id: RMCJobPMCStandardM63B2
