--- a/Resources/Prototypes/_RMC14/Entities/Objects/patron_figurines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/patron_figurines.yml
@@ -1342,3 +1342,14 @@
     state: jessie_first_daily
   - type: PatronFigurine
     id: af9cfb55-9570-4029-ac0f-a87d1def10d7
+
+- type: entity
+  parent: RMCBaseFigurinePatron
+  id: RMCFigurinePatronKhauniBrooks
+  name: Khauni Brooks figurine
+  description: "She has a cute an adorable snoot you can boop."
+  components:
+  - type: Sprite
+    state: khauni_brooks
+  - type: PatronFigurine
+    id: f68a79ad-3427-4b38-a7bb-84e11ef29a93
