--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/morgue.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/morgue.yml
@@ -1,6 +1,28 @@
 - type: entity
+  id: RMCMorgueBase 
+  components:
+  - type: Damageable
+    damageContainer: StructuralMarine
+    damageModifierSet: StructuralMarine    
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 100
+      behaviors:
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: Climbable
+    delay: 2
+  - type: MeleeSound
+    soundGroups:
+      Brute:
+        path:
+          "/Audio/_RMC14/Structures/metalhit.ogg"
+
+- type: entity
   parent: Morgue
-  id: CMMorgue
+  id: [ CMMorgue, RMCMorgueBase ]
   name: morgue
   description: Used to store bodies until someone fetches them.
   components:
@@ -39,10 +61,12 @@
     blacklist:
       components:
       - Xeno
+  - type: Anchorable
+    flags: None
 
 - type: entity
   parent: Crematorium
-  id: CMCrematorium
+  id: [ CMCrematorium, RMCMorgueBase]
   name: crematorium
   description: A human incinerator. Works well on barbecue nights.
   components:
