--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_doors.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_doors.yml
@@ -74,6 +74,7 @@
     closingSpriteState: closed_unlit
   - type: XenoConstructionPlasmaCost
     plasma: 120
+    scalingCost: true
   - type: XenoStructureUpgradeable
     to: DoorXenoResinThick
     cost: 25
@@ -133,5 +134,6 @@
         Slash: 900
   - type: XenoConstructionPlasmaCost
     plasma: 145
+    scalingCost: true
   - type: XenoStructureUpgradeable
     to: null
