--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/marines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/marines.yml
@@ -409,3 +409,12 @@
   - type: Sprite
     sprite: _RMC14/Objects/Clothing/Uniforms/Synthetic/joe.rsi
 
+- type: entity
+  parent: RMCMarineUniformBase
+  id: CMJumpsuitSyntheticOutdated
+  name: outdated synthetic support uniform
+  description: An outdated version of the UNMC synthetic support uniform. Despite the age, it is still very stylish and practical.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Uniforms/Synthetic/outdated_synth.rsi
+
