--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/wall_lockers.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/wall_lockers.yml
@@ -22,6 +22,7 @@
     whitelist:
       tags:
       - CommandTablet
+      # command headset
   - type: AccessReader
     access: [["CMAccessCommand"]]
 
