SOP update, documentation addition, prototype update

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/wall_lockers.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/wall_lockers.yml
@@ -22,7 +22,6 @@
     whitelist:
       tags:
       - CommandTablet
-      # command headset
   - type: AccessReader
     access: [["CMAccessCommand"]]
 
@@ -43,4 +42,4 @@
   table: !type:AllSelector
     children:
     - id: RMCTabletCO
-
+    - id: CMHeadsetSeniorCommand
