--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_liaison.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_liaison.yml
@@ -11,19 +11,7 @@
   icon: "CMJobIconEmpty"
   joinNotifyCrew: false
   accessGroups:
-  - RMCWeYa
-  - CMAccessCommand
-  - CMAccessResearch
-  - CMAccessMedical
-  - CMAccessMedPrep
-  - CMAccessColonyPublic
-  - CMAccessColonyResearch
-  - CMAccessColonyEngineering
-  - CMAccessColonyLogistics
-  - CMAccessColonyBrig
-  - CMAccessColonyMedbay
-#  - TODO RMC14 WeYa flight
-  - CMAccessColonyCommand
+  - RMCWeYaExecColony
   special:
   - !type:AddComponentSpecial
     components:
