--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/corporate_executives.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/corporate_executives.yml
@@ -75,11 +75,7 @@
   icon: "CMJobIconEmpty"
   joinNotifyCrew: false
   accessGroups:
-  - RMCWeYa
-  - CMAccessCommand
-  - CMAccessResearch
-  - CMAccessMedical
-  - CMAccessMedPrep
+  - RMCWeYaExec
   special:
   - !type:AddComponentSpecial
     components:
