--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/liaison.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/liaison.yml
@@ -26,7 +26,7 @@
   icon: "CMJobIconLiaison"
   joinNotifyCrew: false
   supervisors: cm-job-supervisors-we-ya
-  access:
+  accessGroups:
   - RMCWeYaExecColony
   minimapIcon:
     sprite: _RMC14/Interface/map_blips.rsi
