--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/boiler.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/boiler.yml
@@ -10,6 +10,9 @@
   name: Boiler
   description: A huge, grotesque xenonid covered in glowing, oozing acid slime.
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideRoleBoiler
   - type: GhostRole
     name: cm-job-name-xeno-boiler
   - type: Sprite
