--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/carrier.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/carrier.yml
@@ -11,6 +11,9 @@
   description: A strange-looking alien creature. It carries a number of scuttling jointed crablike creatures.
   abstract: true
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideRoleCarrier
   - type: GhostRole
     name: cm-job-name-xeno-carrier
   - type: MobState
