--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/crusher.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/crusher.yml
@@ -10,6 +10,9 @@
   name: Crusher
   description: A huge alien with an enormous armored crest.
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideRoleCrusher
   - type: GhostRole
     name: cm-job-name-xeno-crusher
   - type: Sprite
