--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/hivelord.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/hivelord.yml
@@ -11,6 +11,9 @@
   name: Hivelord
   description: A builder of really big hives.
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideRoleHivelord
   - type: GhostRole
     name: cm-job-name-xeno-hivelord
   - type: MobState
