--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/lurker.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/lurker.yml
@@ -10,6 +10,9 @@
   name: Lurker
   description: A beefy, fast alien with sharp claws.
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideRoleLurker
   - type: GhostRole
     name: cm-job-name-xeno-lurker
   - type: Sprite
