--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/praetorian.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/praetorian.yml
@@ -11,6 +11,9 @@
   name: Praetorian
   description: A huge, looming beast of an alien.
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideRolePraetorian
   - type: GhostRole
     name: cm-job-name-xeno-praetorian
   - type: Sprite
