--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/warrior.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/warrior.yml
@@ -10,6 +10,9 @@
   name: Warrior
   description: A beefy alien with an armored carapace.
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideRoleWarrior
   - type: GhostRole
     name: cm-job-name-xeno-warrior
   - type: Sprite
