--- a/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_utility_actions.yml
+++ b/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_utility_actions.yml
@@ -167,6 +167,15 @@
     useDelay: 3
 
 - type: entity
+  parent: CMGuidebookActionXenoBase
+  id: CMGuidebookActionXenoLeader
+  name: Choose Leaders
+  description: Promotes and demotes xenonid leaders, or watches them. Promoting a xeno to leader will make them emit your pheromones around themselves.
+  components:
+    - type: Sprite
+      state: xeno_lead
+
+- type: entity
   parent: ActionXenoBase
   id: ActionXenoHeal
   name: Heal Xenonid (600) # TODO RMC14 proper plasma costs
