Make certain roles trackable

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/MilitaryPolice/military_warden.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/MilitaryPolice/military_warden.yml
@@ -56,6 +56,7 @@
       icon:
         sprite: _RMC14/Interface/map_blips.rsi
         state: warden
+    - type: RMCTrackable
 
 - type: startingGear
   id: CMGearMilitaryWarden
