--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/bureau_observer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/bureau_observer.yml
@@ -12,6 +12,7 @@
   - type: ConditionalSpawner
     prototypes:
     - RMCRandomHumanoidBureauObserver
+  - type: RMCTrackable
 
 - type: entity
   id: RMCRandomHumanoidBureauObserver
