--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/corporate_executive_specialist.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/corporate_executive_specialist.yml
@@ -12,6 +12,7 @@
   - type: ConditionalSpawner
     prototypes:
     - RMCRandomHumanoidCorporateExecutiveSpecialist
+  - type: RMCTrackable
 
 - type: entity
   id: RMCRandomHumanoidCorporateExecutiveSpecialist
