--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/corporate_executive_supervisor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/corporate_executive_supervisor.yml
@@ -12,6 +12,7 @@
   - type: ConditionalSpawner
     prototypes:
     - RMCRandomHumanoidCorporateExecutiveSupervisor
+  - type: RMCTrackable
 
 - type: entity
   id: RMCRandomHumanoidCorporateExecutiveSupervisor
