--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/interstellar_commerce_bureau_liaison.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/interstellar_commerce_bureau_liaison.yml
@@ -12,6 +12,7 @@
   - type: ConditionalSpawner
     prototypes:
     - RMCRandomHumanoidICBLiaison
+  - type: RMCTrackable
 
 - type: entity
   id: RMCRandomHumanoidICBLiaison
