--- a/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/senior_enlisted_advisor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/senior_enlisted_advisor.yml
@@ -88,6 +88,7 @@
       background:
         sprite: _RMC14/Interface/map_blips.rsi
         state: background_medical
+    - type: RMCTrackable
 
 - type: startingGear
   id: CMGearSeniorEnlistedAdvisor
