--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Medical/chief_medical_officer.yml
@@ -60,6 +60,7 @@
       background:
         sprite: _RMC14/Interface/map_blips.rsi
         state: background_command
+    - type: RMCTrackable
 
 - type: startingGear
   id: CMGearCMO
