--- a/Resources/Prototypes/_RMC14/Roles/Jobs/MilitaryPolice/chief_military_police.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/MilitaryPolice/chief_military_police.yml
@@ -63,6 +63,7 @@
       icon:
         sprite: _RMC14/Interface/map_blips.rsi
         state: cmp
+    - type: RMCTrackable
 
 - type: startingGear
   id: CMGearChiefMP
