--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/liaison.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/liaison.yml
@@ -65,6 +65,7 @@
       icon:
         sprite: _RMC14/Interface/map_blips.rsi
         state: cl
+    - type: RMCTrackable
 
 - type: startingGear
   id: CMGearLiaison
