--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Requisitions/quartermaster.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Requisitions/quartermaster.yml
@@ -57,6 +57,7 @@
       icon:
         sprite: _RMC14/Interface/map_blips.rsi
         state: cargo
+    - type: RMCTrackable
 
 - type: startingGear
   id: CMGearQuartermaster
