--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
@@ -33,7 +33,7 @@
         RMCSkillCqc: 3
         RMCSkillEngineer: 4
         RMCSkillConstruction: 3
-        # RMCSkillFirearms: 2 -- Synths cant use firearms why the fuck do they get the highest skill??
+        RMCSkillFirearms: 2
         RMCSkillOverwatch: 1
         RMCSkillMedical: 3
         RMCSkillSurgery: 2
